--- a/app/views/submissions/show.html.haml
+++ b/app/views/submissions/show.html.haml
@@ -13,7 +13,7 @@
   %dt Submitter
   %dd#submitter= @submission.user.username
   %dt Date
-  %dd#submission-time= format_datetime(@submission.created_at)
+  %dd#submission-time= format_datetime(@submission.created_at.localtime)
   %dt Public
   %dd#public
     = @submission.public
@@ -51,7 +51,7 @@
     - if comment.persisted?
       .comment.general-comment
         .user= "#{comment.user.username} commented"
-        .body= comment.body
+        .body= render_markdown(comment.body)
 
   = form_for [@submission, @comment] do |f|
     = field_set_tag "Leave a comment" do
